Se agrega un parrafo al blog

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
               <div class="col-12">
                   <h1>Esta es la cabecera <span id="mini">del blog</span> </h1>
                   <p>Este es el parrafo de inicio donde se va a escribir sobre un artículodel blog</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, perferendis nesciunt! Aspernatur molestias mollitia, cumque nihil id minus odit pariatur ipsum, harum beatae dolore quaerat iste nisi error vitae dolorum.</p>
               </div>
           </div>
       </div>
