Se mejoran los estilos y se agrega cabecera

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <div class="container mt-5">
           <div class="row" id="caja">
               <div class="col-12">
-                  <h1>Esta es la cabecera <span id="mini">del blog</span> </h1>
+                  <h1>Hyperblog <span id="mini">tu blog de confianza</span> </h1>
+                  <h2>Titulo del primer blog</h2>
                   <p>Este es el parrafo de inicio donde se va a escribir sobre un artículodel blog</p>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum</p>
                   <p>
