--- a/index.html
+++ b/index.html
@@ -11,20 +11,18 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-      <div class="container mt-5">
-          <div class="row" id="caja">
-              <div class="col-12">
-                  <h1>Hyperblog <span id="mini">tu blog de confianza</span> </h1>
-                  <h2>Titulo del primer blog</h2>
-                  <p>Este es el parrafo de inicio donde se va a escribir sobre un artículodel blog</p>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum</p>
-                  <p>
-                      perferendis nesciunt! Aspernatur molestias mollitia,
-                      cumque nihil id minus odit pariatur ipsum, harum beatae
-                      dolore quaerat iste nisi error vitae dolorum.</p>
-              </div>
-          </div>
+    <div id="container">
+      <div id="cabecera">
+          Hyperblog
+          <span id="tagline">Tu blog de cabecera</span>
       </div>
+      <div id="post">
+          <h1>Este es el título atractivo e interesante del post</h1>
+          <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+          <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+          <p>Suscribete y dale like</p>
+      </div>
+  </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
