Se amoda estilo del footer y se corrige texto del footer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <p>Suscribete y dale like</p>
       </div>
       <div id="footer">
-        hecho por Alexander de Alvasonline
+        Hecho por Alexander de Alvasonline
       </div>
   </div>
     <!-- Optional JavaScript -->
