--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <p>Se edita el texto: Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
           <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
           <p>Suscribete y dale like</p>
+          <p>Se agrega el texto para hacer modificaciones fuera del master, directo al footer mara ver el pull request</p>
       </div>
       <div id="footer">
         Hecho por Alexander de Alvasonline <a href="http://www.alvasonline.com">Sitio Web</a>
