Se agrega la imagen a un CDN

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           Hyperblog
           <span id="tagline">Tu blog de cabecera</span>
       </div>
-      <img src="imagenes/spacex.jpg" width="100%" alt="spacex">
+      <img src="imagenes/spacex.jpg" width="100%" alt="">
       <div id="post">
           <h1>Este es el título atractivo e interesante del post</h1>
           <p>Se edita el texto: Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
